app/assets/stylesheets/custom.css.scss
/* mixins, variables, etc */
$primary-color: #1575E7;
$secondary-color: #03CB69;
$accent-color: #F16404;
$secondary-accent-color: #B904DC;
$light-grey: #EEE;
$medium-grey: #AAA;
$dark-grey: #555;

$nav-height: 60px;

@mixin border-radius($radius) {
	-webkit-border-radius: $radius;
	-moz-border-radius: $radius;
	-ms-border-radius: $radius;
	border-radius: $radius;
}

/* typography */

@import url("//fonts.googleapis.com/css?family=Lato:400,700");
@import url("//fonts.googleapis.com/css?family=Quicksand:300,400");

@font-face {
  font-family: 'Sofia Pro Light';
  src: font-url('SofiaProLight-webfont.eot');
  src: font-url('SofiaProLight-webfont.woff2') format("woff2"), 	
  font-url('SofiaProLight-webfont.woff') format("woff"), 
  font-url('SofiaProLight-webfont.ttf') format("truetype"); 
}

$px-16: 0.85em;
$px-20: 1.25em;
$px-24: 1.5em;
$px-30: 1.88em;

$body-font-family: Lato, Arial, sans-serif;
$header-font-family: 'Sofia Pro Light', Quicksand, sans-serif;

body {
	font-family: $body-font-family; 
}

h1, h2, h3, h4 {
	font-family: $header-font-family;
	font-weight: normal;
}

h1 {
	font-size: $px-30;
}

a {
  text-decoration: none;
}

em {
	font-style: normal;
	color: $accent-color;
}

nav li a {
 font-size: $px-16;
}

header nav li a {
	color: $dark-grey;
}

footer nav li a {
	color: $primary-color;
}

fieldset legend {
	font-family: $header-font-family;
	font-size: $px-20;
	color: $medium-grey;
}

form label {
	font-size: $px-16;
}
.form-label {
	font-size: $px-16;
}




/* global */
$base-line-height: 1.33em;
$global-padding: $base-line-height/2;

html, body, div, form, header, footer, nav, p {
	position: relative;
  margin: 0;
  padding: 0;
  width: 100%;
  box-sizing: border-box;
}

body {
	text-align: center;
	background-color: $light-grey;
}

.center-wrap {
	width: 90%;
	margin: 0 auto;
}

.clear-nav {
	padding-top: $nav-height;
}

.hidden {
	visibility: hidden;
}

.col-1-2, .col-2-2, .col-1-3, .col-2-3, .col-1-8 {
	padding: 0 $global-padding;
	float: left;
}

.col-1-2 {
	width: 50%;
}

.col-2-2 {
	width: 100%;
}

.col-1-3 {
	width: 33%;
}

.col-2-3 {
	width: 66%;
}

.col-1-8 {
	width: 12.5%;
}

.accent-border {
	width: 100%;
	display: block;
	border-bottom: 3px dotted $accent-color;
	margin-bottom: $base-line-height;
}

.button-style {
  width: fit-content;
  min-width: 135px;
  margin: 0 auto;
  background-color: $primary-color;
  color: #FFF;
  font-size: $px-20;
  padding: 15px 25px;
  
  @include border-radius(27px);
}


nav {
	ul {
		display: none;
		list-style: none;
  	margin: 10px 0;
 		padding: 0;
  	height: fit-content; 
	}
	
	ul li {
  	//display: inline-block;
  	display: none;
  } 
}


/* header */
header {
	nav {
  	height: $nav-height;
  	position: fixed;
  	top: 0;
  	left: 0;
  	z-index: 10;
  	background-color: #FFF;
  	text-align: left; 

		img {
  		width: 150px;
  		display: inline-block;
  		margin-top: 12px;
		}

		ul {
  		position: absolute;
  		top: 0;
  		bottom: 0;
  		right: 0;
		}
	}
}

#menu-icon {
  width: 3.2em;
  height: 3em;
  position: absolute;
  top: 0; right: 0;
  margin-top: $global-padding;
  
  .bar {
  	height: 0.5em;
  	margin-bottom: 0.5em;
  	background: $primary-color;
		@include border-radius(0.2em); 
  } 
}

/* footer */
footer {
	float: left;
	min-height: $nav-height;
	padding: $global-padding;
	color: $dark-grey;
	background-color: $medium-grey;
		
	nav ul li {
		margin-left: $base-line-height;
	}
	
	small {
		display: block;
		margin-bottom: $global-padding;
	}
	
	h3 {
		margin: 0;
		padding: 0;
	}
}

.footer-left {
	width: 49%;
	float: left;
	text-align: left;
	margin-bottom: $base-line-height;
}

.footer-right {
	width: 49%;
	float: right;
	text-align: right;
	margin-bottom: $base-line-height;
}




/* forms */
form {
	height: fit-content;
}

input, select {
	width: 100%;
	height: ($base-line-height * 2);
	margin-bottom: $base-line-height;
}

fieldset {
	border: none;
	padding: 0;
}

fieldset legend {
	text-align: left;
	margin: 0 0 $global-padding 0;
	padding: 0;
}

form label {
	display: block;
	text-align: left;
}

.form-label {
	clear: left;
	display: block;
	text-align: left;
	padding: 0 $global-padding;
}

form h3 {
	clear: left;
	margin: $global-padding 0;
	padding: 0 $global-padding;
	font-size: 1em;
	text-align: left;
}

input[type="text"] {
	border: 1px solid $primary-color;
}

input[type="submit"] {
	border: none !important;
	margin: 2em auto 4em;
}

input[type="radio"] {
	width: fit-content;
	display: none;
}

.radio-label {
	display: inline;
}

.radio-row {
	float: left;
	margin-bottom: $global-padding;
}

input[type="radio"] + label:before {
	content: "";
	display: inline-block;
	width: $px-20;
	height: $px-20;
	margin: 0 $global-padding;
	
	background-color: $primary-color;
	@include border-radius(50%);
	box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
}

input[type="radio"]:checked + label:before {
	background-color: $secondary-accent-color;
}




/* Media queries */

// Small screens, 640px
@media only screen and (max-width: 40em) {  
	
	header {
		nav ul, nav:active ul{
			display: none;
			width: 111%;
			margin: 0 -6%;
			text-align: center;
			top: $nav-height;
			background: #FFF;
		}
		nav ul li {
			width: 100%;
			display: block;
			padding: $global-padding 0;
			border-bottom: 2px solid $secondary-color;
		}
		nav ul li a {
			font-size: $px-20;
		}
	}
	
	#menu-icon {
		display: inline-block;
		z-index: 11;
	}
}

// Medium screens, 641px - 1024px
@media only screen and (min-width: 40.063em) and (max-width: 64em) {
	
	header {
		nav ul {
			display: inline-block;
		}
		nav ul li {
			margin-left: 50px;
		}
		
		#menu-icon {
			display: none;
		}
	}
}

// Large screens, 1025px
@media only screen and (min-width: 64.063em) {
	
	header {
		nav ul {
			display: inline-block;
		}
		nav ul li {
			margin-left: 50px;
		}
		
		#menu-icon {
			display: none;
		}
	}
}

